<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="text1">便便的离去，是马桶的吸引，还是屁股的不挽留？</string>
    <string name="text2">美丽风景……</string>
    <string name="app_name">河大在线</string>
    <string name="action_settings">Settings</string>
    <string name="plz_login_desc">您还没有登陆，登陆后才能回答问题，现在登陆吗 ?</string>
    <string name="plz_login_more">登陆后功能更多</string>
    <string name="answer_questions_ing">正在回答问题，轻稍后&#8230;</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="must_be_login">您必须先登录后，才能查看个人信息，现在登陆吗？</string>
    <string name="title_activity_daital_news_web_view">DaitalNewsWebViewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cetquery">CETQueryActivity</string>
    <string name="title_activity_bai_du">BaiDuActivity</string>
    <string name="title_activity_bai_du_food">BaiDuFoodActivity</string>
    <string name="title_activity_henu_image">HenuImageActivity</string>
    <string name="main_title">河大在线</string>
    <string name="main_login">登录</string>
    <string name="main_login_msg">使用户名或手机号</string>
    <string name="main_regist">注册</string>
    <string name="main_regist_msg">如果你没有账号，请选择注册</string>
    <string name="login_user_hint">登录名/邮箱/手机号</string>
    <string name="login_passwd_hint">密码</string>
    <string name="login_forget_passwd">忘记密码?</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_paper__airplanes">Paper_AirplanesActivity</string>
    <string name="title_activity_pager_ari_plance">PagerAriPlanceActivity</string>
    <string name="title_activity_pager_ari_plance_comment">PagerAriPlanceCommentActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_update_user_info">UpdateUserInfoActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_about_henu_center">AboutHenuCenterActivity</string>
    <string name="title_activity_baout_me">BaoutMeActivity</string>

</resources>